# Cerebras-Inference-Cookbook

./: .env.example  .gitignore  Dockerfile  README.md  justfile  pyproject.toml
backend/: cli.py  main.py
backend/src/: config.py  llm.py  news_fetcher.py  prompts.py  schemas.py
backend/templates/: index.html
docs/: blog.md  ppl.md  system_design.md
